Qalculate changelog:
--------------------

v0.8.0:
- complete rework of history handling
- enable timestamp conversion for 9-12 digits

v0.7.0:
- replace "approx." with ~ sign
- make result selectable
- better input focus handling
- font size adjustments for long results
- fix issues with multiple instances of the applet
- make default currency selectable (requires libqalculate v3.3 or later)
- add Croation translation from Vladimir Mikulic

v0.6.1:
- various fixes for compatibility with older library versions
- fixes a crash on certain platforms

v0.6:
- add support for launching a program from the main widget
- fix issue with currentcy timestamp updating in the options
- fix input history not working anymore
- bump copyright to 2019
- update translations

v0.5:
- update translations
- add context menu for copying the results to the clipboard
- bump copyright to 2018
- fix issues with applet size in recent KDE versions
- fix issues with image/logo in recent KDE versions
- add support for negative two's complement representation (requires libqalculate v2.5 or later)

v0.4.0:
- add support for libqalculate v2.0.0
- change license to MIT
- bump copyright to 2017
- add .clang-format file for C++ plugin and format accordingly

v0.3.1:
- history is now always initialized properly

v0.3:
New features:
- Add support for history, which can be disabled in the options
  The following keys are available:
  <UP> - Previous history entry
  <DOWN> -  Next history entry
  <PAGE UP> - First history entry
  <PAGE DOWN> - Last history entry
  <CTRL + C> - Clear input
Bug fixes:
- create only a single C++ wrapper object

v0.2:
- make icon configurable
- add busy indicator
- make calculations run in background
- require at least libqalculate-0.9.8

v0.1.1:
- add spanish translation by Obed González

v0.1:
- initial version