@@ -1,6 +1,6 @@
 The MIT License (MIT)
 
-Copyright © 2016 - 2019 Daniel Schopf <schopfdan@gmail.com>
+Copyright (c) 2016 - 2020 Daniel Schopf <schopfdan@gmail.com>
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the “Software”),
